--- a/angular-bs-base/src/app/cart/cart.component.html
+++ b/angular-bs-base/src/app/cart/cart.component.html
@@ -11,7 +11,7 @@
       lineItem
       [columns]="defaultColumns "
       [dataItem]="dataItem"
-    ><i class="fa fa-spinner fa-spin"></i></div>
+    ><i class="fa fa-spinner fa-spin text-primary"></i></div>
   </div>
 
 </div>
