--- a/angular-bs-base/src/app/cart/cart.component.html
+++ b/angular-bs-base/src/app/cart/cart.component.html
@@ -7,7 +7,8 @@
 
   <div class="col d-md-none" *ngFor="let dataItem of dataSource" style="margin: 4px 0px;">
     <div
-      style="padding: 15px; width: 344px; text-align: center"
+      class="col-12"
+      style="padding: 15px 0px;"
       lineItem
       [columns]="defaultColumns "
       [dataItem]="dataItem"
