--- a/angular-bs-base/src/app/home/home.component.html
+++ b/angular-bs-base/src/app/home/home.component.html
@@ -1,1 +1,22 @@
 <p>home works!</p>
+<mat-slider min="1" max="100" step="1" value="1"></mat-slider>
+
+<mat-card class="example-card">
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title>Shiba Inu</mat-card-title>
+    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+  <mat-card-content>
+    <p>
+      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+      bred for hunting.
+    </p>
+  </mat-card-content>
+  <div class="btn btn-group">
+    <button class="btn btn-secondary">LIKE</button>
+    <button class="btn btn-primary">SHARE</button>
+  </div>
+</mat-card>
